# pr-reviewer

./: .env.example  .gitignore  README.md  docker-compose.yml  dummy.env  main.py  pyproject.toml  skills-lock.json  streamlit_app.py
backend/: Dockerfile  main.py  pyproject.toml
backend/api/v1/: routes.py
backend/core/: config.py  providers.py
backend/models/: schemas.py
backend/services/: reviewer.py
docs/: PRD-arquetectura-front-back.md
examples/: topology.yaml
frontend/: Dockerfile  pyproject.toml  streamlit_app.py
frontend/.streamlit/: config.toml
prompts/: reviewer_instructions.txt
src/core/: __init__.py  config.py  exceptions.py  logging_config.py  observability.py
src/knowledge/: __init__.py  client.py  models.py  population.py  queries.py  schema.py
src/reviewer/: agent.py  models.py  prompts.py  tools.py
tests/: conftest.py  test_extract_paths.py  test_impact_section.py  test_knowledge_models.py  test_logging_config.py  test_observability.py  test_population.py  test_queries.py  test_review_integration.py  test_tools.py  test_webhook.py
tests/test_api/: conftest.py  test_review_endpoint.py
tests/test_reviewer/: test_config_adapter.py  test_review_pr_with_config.py  test_tools_post_payload.py  test_tools_token.py
