[project]
name = "1-4-modelos-y-proveedores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=1.7.0",
    "openai>=1.0.0",
    "pygithub>=2.0.0",
    "httpx>=0.28.0",
    "fastapi[standard]>=0.115.0",
    "python-dotenv>=1.2.1",
]
