[project]
name = "1-4-modelos-y-proveedores"
version = "0.1.0"
description = "PR Code Reviewer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opik",
    "openinference-instrumentation-agno",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a running Neo4j instance (skip by default with -m 'not integration')",
]
